# PassClip

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
src/: config.rs  crypto.rs  daemon.rs  main.rs
src/ipc/: protocol.rs  server.rs
src/webauthn/: authenticator.rs  mod.rs
