[package]
name = "passclip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.0"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
zeroize = { version = "1.7.0", features = ["derive"] }