[package]
name = "passclip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify-rust = "4.11"
serde_json = "1.0"
arboard = "3.4"
clap = { version = "4.0", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
url = "2.5"
webauthn-rs = { version = "0.6.0-alpha.1" }
zeroize = { version = "1.7", features = ["derive"] }